<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/user_name"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/user_phone"
        android:hint="@string/phone_number"
        android:layout_below="@+id/user_name"
        android:layout_alignLeft="@+id/user_name"
        android:layout_alignStart="@+id/user_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email_address"
        android:id="@+id/user_email"
        android:layout_below="@+id/user_phone"
        android:layout_alignLeft="@+id/user_phone"
        android:layout_alignStart="@+id/user_phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/user_passwd"
        android:layout_below="@+id/user_email"
        android:layout_alignLeft="@+id/user_email"
        android:layout_alignStart="@+id/user_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:id="@+id/user_conf_password"
        android:layout_below="@+id/user_passwd"
        android:layout_alignLeft="@+id/user_passwd"
        android:layout_alignStart="@+id/user_passwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btn_signup"
        android:layout_below="@+id/user_conf_password"
        android:layout_alignLeft="@+id/user_conf_password"
        android:layout_alignStart="@+id/user_conf_password"
        android:layout_marginTop="25dp"
        android:onClick="onSignUpClicked"/>
</RelativeLayout>
