<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegistrationActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email_address"
        android:id="@+id/user_email"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/user_passwd"
        android:layout_below="@+id/user_email"
        android:layout_alignLeft="@+id/user_email"
        android:layout_alignStart="@+id/user_email" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="75dp"
            android:text="I'm a rider"
            android:textSize="18dp"
            android:onClick="radio"
            android:id="@+id/rider"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="75dp"
            android:text="I'm a Driver"
            android:textSize="18dp"
            android:onClick="radio"
            android:id="@+id/driver"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/btn_signin"
        android:layout_marginTop="150dp"
        android:onClick="onSignUpClicked"
        android:layout_alignStart="@id/user_email"
        android:layout_alignLeft="@id/user_email"
        android:layout_below="@+id/user_passwd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btn_signup"
        android:layout_below="@+id/user_passwd"
        android:layout_alignEnd="@id/user_email"
        android:layout_alignRight="@id/user_email"
        android:layout_marginTop="150dp"
        android:onClick="onSignUpClicked"/>


</RelativeLayout>
